...
    }
    
    /// perform initital set of activities as view controller is loaded
    ///
    /// Use this method to perform all intial activites as view controller is loaded like setting up UI and making service call
    private func performInitialSetup() {
        self.title = "Employee List"
        employeeTableView.delegate = self
        employeeTableView.dataSource = self
        self.setUpSearchViewController()
        getEmployeeDataFromViewModel()
        
    }
...
