...
        
        initiateView()
    }
    
    func initiateView() {
        // Do any additional setup after loading the view.
        self.title = "Add Employee"

        employeeViewModel.setAllDataForView()
        if((selectedEmployee?.employeeName) != nil){
            self.title = "Edit Employee"
            setupViewData()
        }
...
